styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  background-color: rgb(255, 255, 255);
  color: rgba(42, 42, 42, 0.96);
  font-family: 'PingFangSC', sans-serif;
  /* @apply font-sans */
}

/* 普通引用的樣式 */
.blockquote {
  @apply border-l-2 border-slate-500 px-2 my-8 italic
}

/* Callout 引用的樣式 */
.callout {
  background-color: rgb(252, 231, 178);
  @apply shadow-[1.5px_1.5px_2px_rgba(0,0,0,0.55)]
}

.callout-title {
  @apply p-2 flex items-center bg-fuchsia-100
}

.callout-icon {
  /* background-color: #f7f7f7; */
  @apply pr-2
}

.callout-content {
  background-color: #aeaeae39;
  @apply p-2
}
.remark-highlight {
  @apply shadow-[1.5px_1.5px_2px_rgba(0,0,0,0.55)] my-4 
}
.language-js {
  /* @apply rounded-lg */
}


@layer base {
  article h1 {
    @apply text-3xl text-gray-400 font-bold mt-16
  }
  article h2 {
    @apply text-2xl text-gray-500 font-bold mt-12 
  }
  article h3 {
    @apply text-xl font-bold text-gray-400 mt-6
  }
  article hr {
    /* color: aqua; */
    @apply my-4 border-gray-400 opacity-50
  }
  article p {
    @apply mb-4 text-sm
  }
  article ul {
    @apply list-disc ml-4 list-outside text-sm
  }
  article > ul {
    @apply  pl-0
  }
  article ol {
    @apply list-decimal list-inside text-sm my-4
  }
  article code { 
    @apply bg-gray-200 text-red-500 px-0.5 rounded-sm text-sm
  }
  article pre code {
    @apply bg-[#1e1e1e]
  }
  a {
    @apply underline text-slate-400 hover:drop-shadow-sm hover:text-teal-700
  }
}

